# BitBot

./: .coverage  .env  .env.example  .gitignore  .mypy.ini  .pdm-python  .pre-commit-config.yaml  .pylintrc  .safety-policy.yml  .safety-project.ini  .vulture_whitelist.py  .yamllint.yaml  ARCHITECTURE.md  BROKER_PLAN.md  BitBot-dev.txt  CODE_REVIEW_FINDINGS.md  CONTRIBUTING.md  DESIGN.md  FEATURE_PLAN.md  GEMINI.md  Makefile  QUICKSTART.md  QWEN.md  README.md  REFACTORING_COMPLETE.md  REFACTOR_COMPLETE.md  REFACTOR_COMPLETE_FINAL.md  REFACTOR_FINAL_STATUS.md  ROADMAP.md  ROLLING_UPDATE_MODE.md  SECURITY.md  analysis_part1_metrics.md  analysis_part3_detailed_files.md  analysis_part4_git_history.md  analysis_part5_recommendations.md  architecture.md  bitbot.db  bot_state.json  bot_state.toml  bot_state_re-BitBot_BitLifeRebels.json  (+38 more)
.credentials/: credentials.toml
.github/: dependabot.yml
.github/scripts/: analyze_code_quality.py  analyze_tool_integration.py  check_complexity.py  check_quality.py  check_validation.py  report_validation.py
.github/workflows/: .pre-commit-config.yaml  bot_actions.yml  check_comments.yml  ci.yml  codeql.yml  deploy_cloudflare.yml  deploy_pages.yml  deploy_vercel.yml  lint-pr.yml  main.yml  maintain_releases.yml  pr-review.yml  preview_page.yml  preview_post.yml  release.yml  run_migrator.yml  sync_reddit_state.yml  trigger-vercel.yml  trigger.yml  update-lockfile.yml
.github/workflows/includes/: install-uv.yml
.hypothesis/constants/: 00126c444b89b618  0266cb7f49be2c50  07fdd830a7ae1a45  12b82b7d4c9dfc56  1cf5475cbed07c13  1d0f69b302ef7a8b  2bd417ed05c4e276  314263d1e7af3170  32d6c651b9554490  359c55184cea87da  4a3054a96d2b4a19  4b49c2d72caa0720  54d1af97c9a6c8cb  58045409195e2c60  588efc6ee8552161  5c4c065cfcc7032f  5d24c9eca5944912  5f5488c3f8c0ff45  60d41e6dbbb1de83  7faf64eb66780b55  8905fc34c6095d72  92143487199f5239  94286f3b5451226e  955ff9828bc53b92  a81b7da19dc4a4d0  a9dd025403615086  abec844ea018dcf0  ad9bdd4b669ce3b9  b0f4d251493f03c4  b2d073d1af4f4f4b  b441aefc093ed482  b9eef7d04dcd3ee3  bbdafb67450646c0  bdc7278d4164d439  bf48e370e5d429e7  c41d31fd5930e30f  c5f2529de407176c  ca894754cad5f0a4  ce5068ecd8043c11  cf54c688a05e894f  (+12 more)
.hypothesis/examples/04e6b3400353b141/: 1fece3b0a645b11e  844176ea603c65a5  e59cb50a7c53334a
.hypothesis/examples/1fece3b0a645b11e/: d3cea2402cae82cb
.hypothesis/examples/844176ea603c65a5/: 0db10762c1161190  10fec506c9766895  1271762b86c9fd4c  27224ee2ff25e28e  350325b3e0219ef2  44b568da5edfa112  46ed523a376287bd  4ae2da8f35e9994e  80ccc708bc782d9b  8f88b3e114dfa25d  9628c35d6d374428  9f113304d4ab2361  9f699b26e70ddf8b  b910b68dfdbdface  c5d8be3f8f01d578  d327b1499e87a47b  d74cad6debcf6793  (+2 more)
.kiro/settings/: mcp.json
.taskmaster/: state.json
.taskmaster/tasks/: tasks.json
api/: run.js
data/: bot_state.json  digest_history.json
docs/: 01-configuration.md  02-templates.md  03-workflows.md  04-cli-commands.md  04-scripts.md  deployment.md
docs/archive/: BUGFIXES.md  CREDENTIALS_CENTRALIZED.md  REFACTOR_100_PERCENT.md  REFACTOR_STATUS.md  REFACTOR_STATUS_FINAL.md  TEST_REPORT.md  analysis_part2_architecture.md
scripts/: analyze_validation.py  analyze_validation_enhanced.py  generate_credentials.py  generate_page.py  lint_architecture.py  maintain_releases.py  migrate_to_sqlite.py
src/: broker.py  check_comments.py  cli.py  config_loader.py  config_models.py  credentials.py  deployment.py  digest_aggregator.py  dry_run.py  gather_post_data.py  helpers.py  io_broker.py  io_handler.py  legacy_release_migrator.py  logging_config.py  main.py  maintain_releases.py  models.py  page_generator.py  patch_file.py  paths.py  placeholder_parser.py  post_to_reddit.py  reddit_parser.py  reddit_release_manager.py  release_manager.py  sync_reddit_history.py
src/bitbot/: __init__.py  __main__.py  actions.py  bot.py  cli.py  clients.py  comments.py  config.py  config_models.py  core.py  crypto.py  debug.py  debug_proxy.py  errors.py  githandler.py  github.py  history.py  logging.py  main.py  messages.py  models.py  patch_file.py  paths.py  processor.py  reddit.py  release.py  settings.py  state.py  types.py  utils.py
src/bitbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/commands/: check.py  gather.py  maintain.py  page.py  patch.py  post.py  release.py  sync.py
src/core/: config.py  container.py  credentials.py  error_context.py  error_logger.py  errors.py  release_queue.py  result.py  retry.py  services.py  state.py  tenacity_helpers.py
src/crypto/: __init__.py  cipher.py  constants.py  encoding.py  modifier.py  obfuscation.py
src/gh/: page_generator.py  parser.py
src/legacy/: __init__.py  check_comments.py  maintain_releases.py  post_to_reddit.py  release_manager.py  sync_reddit_history.py
src/models/: config.py
src/reddit/: __init__.py  available_list_generator.py  changelog_generator.py  client.py  parser.py  post_body_generator.py  poster.py  posts.py  title_generator.py  version_detector.py
stubs/: asyncpraw.pyi  pydantic_settings.pyi
stubs/asyncpraw/: __init__.pyi
templates/: custom_landing_page.example.html  default_landing_page.html  inject_template.md  post_direct_links_template.md  post_template.md
tests/: __init__.py  base.py  config.toml  conftest.py  dummy_post_template.md  dummy_template.html  input_MonetizationVars.txt  mocks.py  test_api_clients.py  test_app_registry.py  test_changelog.py  test_changelog_service.py  test_cli.py  test_commands.py  test_comments.py  test_config.py  test_config_models.py  test_container.py  test_core.py  test_credentials.py  test_crypto.py  test_database.py  test_database_errors.py  test_debug.py  test_deployment.py  test_digest_aggregator.py  test_digest_aggregator_hypothesis.py  test_dry_run.py  test_error_handling.py  test_errors.py  test_external_commands.py  test_file_patcher_service.py  test_gather.py  test_gh_parser.py  test_gh_releases.py  test_gh_releases_ops.py  test_gh_releases_parser.py  test_helpers.py  test_history.py  test_hypothesis.py  (+26 more)
tests/data/: original_vars.txt  patched_vars.txt
(+212 files in other folders)
