[project]
name = "bitbot"
version = "1.0.0"
description = "Automated release management and announcement bot"
requires-python = ">=3.10"
dependencies = [
    "praw>=7.7.1",
    "requests>=2.31.0",
    "toml>=0.10.2",
    "packaging>=23.2",
    "PyGithub>=2.1.1",
    "beartype>=0.22.4",
    "pydantic>=2.12.3",
    "deal>=4.24.5",
    "typer>=0.20.0",
    "rich>=14.2.0",
]

[project.scripts]
bitbot = "cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-toml>=0.10.8",
    "types-requests>=2.31.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "COM812",  # trailing-comma-missing (conflicts with formatter)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["toml", "requests"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "beartype"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "praw.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "github.*"
ignore_missing_imports = true

[tool.deptry]
extend_exclude = ["tests"]

[tool.deptry.per_rule_ignores]
DEP001 = ["helpers", "paths"]
DEP002 = ["ruff", "mypy", "types-toml", "types-requests", "vulture", "interrogate", "deptry", "coverage", "pytest", "deal", "snoop", "pdbpp"]
DEP003 = ["helpers", "paths"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "deptry>=0.23.1",
    "interrogate>=1.7.0",
    "pdbpp>=0.11.7",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "snoop>=0.6.0",
    "vulture>=2.14",
]
