[project]
name = "bitbot"
version = "1.0.0"
description = "Automated release management and announcement bot"
requires-python = ">=3.13"
dependencies = [
    "praw>=7.7.1",
    "requests>=2.31.0",
    "toml>=0.10.2",
    "packaging>=23.2",
    "PyGithub>=2.1.1",
    "beartype>=0.22.4",
    "pydantic>=2.12.3",
    "deal>=4.24.5",
    "typer>=0.20.0",
    "rich>=14.2.0",
    "jinja2>=3.1.6",
]

[project.scripts]
bitbot = "cli:app"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-toml>=0.10.8",
    "types-requests>=2.31.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "COM812",  # trailing-comma-missing (conflicts with formatter)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
".github/scripts/*.py" = ["ALL"]  # CI analysis scripts - ignore all linting
"src/cli.py" = ["E402", "FBT001", "FBT003"]  # sys.path manipulation, typer bool options
"src/commands/*.py" = [
    "BLE001",  # CLI boundary catches all exceptions
    "TRY301",  # NotImplementedError placeholders
    "B008",    # Typer argument defaults
    "PLR0915", # CLI commands can have many statements
    "C901",    # CLI commands can be complex
    "PLR0912", # CLI commands can have many branches
]
"src/core/config.py" = ["PLR0911", "BLE001"]  # Multiple validation returns, file I/O
"src/core/errors.py" = ["DTZ005"]  # Timestamp without timezone is intentional
"src/core/retry.py" = ["ALL"]  # Deprecated - replaced by tenacity
"src/core/tenacity_helpers.py" = ["ANN401"]  # Generic result type checking needs Any
"src/core/state.py" = ["BLE001"]  # File I/O catches all exceptions
"src/core/release_queue.py" = ["BLE001"]  # File I/O catches all exceptions
"src/core/container.py" = ["ANN401", "PLW0603"]  # Generic container needs Any, global is intentional
"src/core/error_logger.py" = ["PLW0603"]  # Global logger singleton is intentional
"src/core/error_context.py" = ["ANN401"]  # Context dict needs Any
"src/core/result.py" = ["ARG002"]  # Unused args in Err methods are intentional
"src/crypto/*.py" = ["ARG005", "PLR2004"]  # Deal lambda args, magic numbers in parsing
"src/gh/parser.py" = ["ARG005", "PLR2004", "C901"]  # Deal lambda args, parsing complexity
"src/gh/page_generator.py" = ["BLE001", "S701", "ARG005"]  # File I/O catches, Jinja2 autoescape, deal lambda args
"src/gh/releases/*.py" = ["ARG005", "FBT001", "FBT002", "FBT003", "S603", "BLE001", "C901"]  # Deal lambdas, bool flags, subprocess, complexity
"src/reddit/*.py" = ["ARG005", "C901", "S110", "BLE001"]  # Deal lambdas, complexity, intentional catches
"src/patch_file.py" = ["PLR2004", "BLE001"]  # Magic numbers, file I/O catches
"src/legacy/*.py" = ["ALL"]  # Legacy code - ignore all errors

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["toml", "requests"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "beartype"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "praw.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "github.*"
ignore_missing_imports = true

[tool.deptry]
extend_exclude = ["tests"]

[tool.deptry.per_rule_ignores]
DEP001 = ["helpers", "paths"]
DEP002 = ["ruff", "mypy", "types-toml", "types-requests", "vulture", "interrogate", "deptry", "coverage", "pytest", "deal", "snoop", "pdbpp"]
DEP003 = ["helpers", "paths"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "deptry>=0.23.1",
    "interrogate>=1.7.0",
    "pdbpp>=0.11.7",
    "pip-audit>=2.8.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "safety>=3.3.1",
    "snoop>=0.6.0",
    "types-requests>=2.32.4.20250913",
    "types-toml>=0.10.8.20240310",
    "vulture>=2.14",
]
