[project]
name = "bitbot"
version = "1.0.0"
description = "Automated release management and announcement bot"
requires-python = ">=3.13,<3.14"
dependencies = [
    "praw>=7.7.1",
    "toml>=0.10.2",
    "beartype>=0.22.4",
    "pydantic>=2.12.3",
    "icontract>=2.7.0",
    "typer>=0.20.0",
    "rich>=14.2.0",
    "jinja2>=3.1.6",
    "dependency-injector>=4.48.2",
    "tenacity>=9.1.2",
    "returns[compatible-mypy]>=0.26.0",
    "icontract>=2.7.2",
]

[project.scripts]
bitbot = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bitbot"]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-toml>=0.10.8",
    "types-requests>=2.31.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["src/bitbot/legacy", ".vulture_whitelist.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "COM812",  # trailing-comma-missing (conflicts with formatter)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
".github/scripts/*.py" = ["ALL"]
"tests/*.py" = ["S101", "ANN001", "ANN201", "ANN202", "ARG001", "ARG002", "PLR2004", "RUF043", "B017", "PT011", "FBT001", "FBT002", "D102", "PLC0415"]
"src/bitbot/cli.py" = ["E402", "FBT001", "FBT003"]
"src/bitbot/commands/*.py" = [
    "BLE001",  # CLI boundary catches all exceptions
    "TRY301",  # raise typer.Exit is intentional
    "B008",    # Typer argument defaults
    "PLR0915", # CLI commands can have many statements
    "C901",    # CLI commands can be complex
    "PLR0912", # CLI commands can have many branches
    "TC001",   # Runtime imports needed for DI
    "TC002",   # Runtime imports needed for Rich console
]
"src/bitbot/core/config.py" = ["PLR0911", "BLE001"]
"src/bitbot/core/errors.py" = ["DTZ005"]
"src/bitbot/core/error_logger.py" = ["PLW0603"]
"src/bitbot/core/state.py" = ["BLE001"]
"src/bitbot/core/release_queue.py" = ["BLE001"]
"src/bitbot/core/error_context.py" = ["ANN401"]
"src/bitbot/core/result.py" = ["ARG002"]
"src/bitbot/crypto/*.py" = ["ARG005", "PLR2004"]
"src/bitbot/gh/parser.py" = ["ARG005", "PLR2004", "C901"]
"src/bitbot/gh/page_generator.py" = ["BLE001", "S701", "ARG005"]
"src/bitbot/gh/releases/*.py" = ["ARG005", "FBT001", "FBT002", "FBT003", "S603", "BLE001", "C901"]
"src/bitbot/reddit/*.py" = ["ARG005", "C901", "S110", "BLE001"]
"src/bitbot/patch_file.py" = ["PLR2004", "BLE001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["returns.contrib.mypy.returns_plugin"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = ["src/bitbot/legacy"]

[[tool.mypy.overrides]]
module = ["toml", "requests", "dependency_injector"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "beartype"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "icontract"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "praw.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "github.*"
ignore_missing_imports = true

[tool.deptry]
extend_exclude = ["tests"]

[tool.deptry.per_rule_ignores]
DEP001 = ["helpers", "paths", "core", "reddit", "gh"]
DEP002 = ["ruff", "mypy", "types-toml", "types-requests", "vulture", "interrogate", "deptry", "coverage", "pytest", "deal", "snoop", "pdbpp"]
DEP003 = ["helpers", "paths"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


[[tool.uv.index]]
name = "safety"
url = "https://pkgs.safetycli.com/repository/na-205d5/project/bitbot/pypi/simple/"
default = false
[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "deptry>=0.23.1",
    "hypothesis>=6.148.3",
    "interrogate>=1.7.0",
    "pdbpp>=0.11.7",
    "pip-audit>=2.8.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.3",
    "safety>=3.3.1",
    "snoop>=0.6.0",
    "types-requests>=2.32.4.20250913",
    "types-toml>=0.10.8.20240310",
    "vulture>=2.14",
]
